message(FATAL_ERROR " This is not project per se")


#if(NOT CMAKE_CONFIGURATION_TYPES)
#    if(NOT CMAKE_BUILD_TYPE)
#        message(STATUS "Setting build type to 'Release' as none was specified.")
#        set_property(CACHE CMAKE_BUILD_TYPE PROPERTY VALUE "Release")
#    endif()
#endif()

#add_subdirectory("Part #2 - CPU")
#add_subdirectory("Part #3 - Buses, Rams, Roms & Mappers")
#add_subdirectory("Part #4 - PPU Backgrounds")
#add_subdirectory("Part #5 - PPU Foregrounds")
#add_subdirectory("Part #7 - Mappers & Basic Sounds")
