CMAKE_MINIMUM_REQUIRED(VERSION 3.20)

PROJECT(
  olcNes_Video1_6502
  VERSION 1.0.0
  DESCRIPTION "NES Emulator, and Tutorial Video Code - Part #2"
  LANGUAGES CXX
)

SET(PROJECT_EXECUTABLE ${PROJECT_NAME})
SET(LINKER_LANGUAGE CXX)
SET(CMAKE_CXX_STANDARD 20)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_EXTENSIONS ON)
SET(THREADS_PREFER_PTHREAD_FLAD ON)

get_filename_component(PARENT_DIR ../ ABSOLUTE)

# Needed so "find_package" can see "FindPixelGameEngine.cmake"
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${PARENT_DIR}/CMake)

SET(${PROJECT_EXECUTABLE}_SRC
  ${PROJECT_SOURCE_DIR}/olcNes_Video1_6502.cpp
  ${PROJECT_SOURCE_DIR}/olc6502.cpp
  ${PROJECT_SOURCE_DIR}/Bus.cpp
)
SET(${PROJECT_EXECUTABLE}_HDR
  ${PROJECT_SOURCE_DIR}/olc6502.hpp
  ${PROJECT_SOURCE_DIR}/Bus.hpp
)

ADD_EXECUTABLE(${PROJECT_EXECUTABLE})

SET_TARGET_PROPERTIES(${PROJECT_EXECUTABLE} PROPERTIES VERSION  "${${PROJECT_NAME}_VERSION}"
                                               LINKER_LANGUAGE  "${LINKER_LANGUAGE}"
                                            CMAKE_CXX_STANDARD  "${CMAKE_CXX_STANDARD}"
                                   CMAKE_CXX_STANDARD_REQUIRED  "${CMAKE_CXX_STANDARD_REQUIRED}"
                                          CMAKE_CXX_EXTENSIONS  "${CMAKE_CXX_EXTENSIONS}"
                                   THREADS_PREFER_PTHREAD_FLAD  "${THREADS_PREFER_PTHREAD_FLAD}"
)

# PixelGameEngine
FIND_PACKAGE(PixelGameEngine REQUIRED)

TARGET_LINK_LIBRARIES(${PROJECT_EXECUTABLE} PixelGameEngine::PixelGameEngine)

TARGET_SOURCES(${PROJECT_EXECUTABLE} PRIVATE ${${PROJECT_EXECUTABLE}_SRC} ${${PROJECT_EXECUTABLE}_HDR})